# GasVisor

./: CMakeLists.txt  README.md  prj.conf
IoTConnect/cert/: certificates.h
boards/: nrf9160dk_nrf9160_ns.overlay
cert/: DigiCertGlobalRootCA_g2.pem  device.pem  rootCA.pem
src/: BatteryStatus.c  BatteryStatus.h  IoTConnectSDK.c  IoTConnectSDK.h  IoTConnect_Config.h  SleepMode.c  SleepMode.h  Weight_Sensor.c  Weight_Sensor.h  certificates.h  main.c
